infrastructure/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: eventhub
  labels:
    app.kubernetes.io/part-of: eventhub
